<resources>
    <string name="take_photo">Take Photo</string>
    <string name="button_two">Button 2</string>
    <string name="button_one">Button 1</string>
    <string name="hint_three">Third hint here</string>
    <string name="hint_two">Second hint here</string>
    <string name="hint_one">First hint here</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>

    <string name="threads">Threads Indeed</string>
    <!-- sample values of text views -->
    <string name="sample_name">Sample Name</string>
    <string name="sample_fav_color">Sample Color</string>
    <string name="sample_number">Sample Number</string>
    <string name="sample_mothertongue">Sample Mother Tongue</string>

    <!-- hints for edit texts used in activity_saved_state -->
    <string name="name">Enter your name</string>
    <string name="number">Enter you number</string>
    <string name="fav_color">Enter your favourite color</string>
    <string name="mothertongue">Enter your mother tongue</string>

    <!-- Bowler names for horizontal scroll view -->
    <string name="zaheer">Zaheer</string>
    <string name="bhajji">Bhajji</string>
    <string name="ashwin">Ashwin</string>
    <string name="ishant">Ishant</string>
    <string name="bhuvaneshwar">Bhuvaneshwar</string>

    <!-- For static fragments -->
    <string name="static_fragment_one">First Fragment</string>
    <string name="static_fragment_two">Second Fragment</string>
    <string name="static_fragment_three">Third Fragment</string>

    <!-- Fragment Tags -->
    <string name="static_fragment_1">STATIC_FRAGMENT_1_TAG</string>
    <string name="static_fragment_2">STATIC_FRAGMENT_2_TAG</string>
    <string name="static_fragment_3">STATIC_FRAGMENT_3_TAG</string>

    <string name="pager">Pager</string>
    <string name="combined">Combined Scroll</string>
    <string name="vertical">Vertical Scroll</string>
    <string name="horizontal">Horizontal Scroll</string>
    <string name="batsmen_selection">India usually has a stronger batting line-up for its teams.</string>
    <string name="bowling_selection">India\'s pace bowling attack has seen ups and downs.</string>
    <string name="end_of_scroll_view">Thanks for scrolling !</string>
    <string name="batsmen">Vertical Scroll View Example</string>
    <string name="bowlers">Horizontal Scroll View Example</string>
    <string name="show_as_list_view">ListView</string>

    <!-- TutorialsActivity -->
    <string name="edit_text_hint">Enter something here</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="dynamic_spinner_title">Dynamic Spinner</string>
    <string name="static_spinner_title">Spinner with data populated statically</string>
    <string name="list_view_title">ListView</string>
    <string-array name="country_list">
        <item>Angola</item>
        <item>Bahrain</item>
        <item>Canada</item>
        <item>Denmark</item>
        <item>England</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Japan</item>
        <item>K</item>
        <item>Liberia</item>
        <item>Morocco</item>
        <item>Nigeria</item>
        <item>Poland</item>
        <item>Russia</item>
        <item>Sudan</item>
        <item>Tunisia</item>
        <item>Uruguay</item>
        <item>Venuzuela</item>
        <item>Western Samoa</item>
        <item>X-mas island</item>
        <item>Zimbabwe</item>
    </string-array>
    <!-- Main Activity-->
    <string-array name="index_list">
        <item>ListView basic example</item>
        <item>ListView with images</item>
        <item>ListViews and other applications</item>
        <item>Fragments and ScrollViews</item>
        <item>Saving State</item>
        <item>JSON</item>
        <item>Making network requests</item>
        <item>Multithreading</item>
        <item>Intents</item>
        <item>BroadcastReceivers</item>
    </string-array>
    <string name="click_me_07">Tutorial 7</string>
    <string name="image_description">Continent</string>
    <string-array name="continents">
        <item>Asia</item>
        <item>Europe</item>
        <item>Africa</item>
        <item>Australia</item>
        <item>North America</item>
        <item>South America</item>
        <item>Antartica</item>
    </string-array>
    <string name="default_data">Continent</string>
    <string name="click_me">Click Me</string>
    <string name="app_name">Android_Tutorial_06</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_tutorial_7">Tutorial_7</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_horizontal_scroll">HorizontalScrollActivity</string>
    <string name="title_activity_scroll">ScrollActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="title_activity_json">JSONActivity</string>
    <string name="title_activity_saved_state">SavedStateActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
</resources>
