<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scrollableviewsandfragments.HorizontalScrollFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bowlers"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"/>

    <!-- TODO: Update blank fragment layout -->
    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/title">

        <LinearLayout
            android:id="@+id/container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center_vertical"
                >

                    <ImageView
                        android:id="@+id/image_zaheer"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/zaheer"
                        android:layout_margin="2dp"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:text="@string/zaheer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_ishant"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/ishant"
                    android:layout_margin="2dp"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:text="@string/ishant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_ashwin"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/ashwin"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:scaleType="fitXY"
                    />

                <TextView
                    android:text="@string/ashwin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_bhajji"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/bhajji"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:scaleType="fitXY"/>

                <TextView
                    android:text="@string/bhajji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_bhuvaneshwar"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/bhuvneshwar"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:scaleType="fitXY"/>

                <TextView
                    android:text="@string/bhuvaneshwar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>
